tests/ui/missing_comma.stderr
error: no rules expected the token `"2"`
 --> $DIR/missing_comma.rs:4:21
  |
4 |     json!({ "1": "" "2": "" });
  |                    -^^^ no rules expected this token in macro call
  |                    |
  |                    help: missing comma here
